--- a/WpfOnDotNetCoreSample/WpfOnDotNetCoreSample.csproj
+++ b/WpfOnDotNetCoreSample/WpfOnDotNetCoreSample.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="LivetCask" Version="3.2.1" />
+    <PackageReference Include="MicroResolver" Version="2.3.5" />
     <PackageReference Include="ReactiveProperty" Version="6.2.0" />
     <PackageReference Include="System.Reactive" Version="4.4.1" />
   </ItemGroup>
