--- a/WpfOnDotNetCoreSample/WpfOnDotNetCoreSample.csproj
+++ b/WpfOnDotNetCoreSample/WpfOnDotNetCoreSample.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="System.Reactive" Version="4.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Converters\" />
+  </ItemGroup>
+
 </Project>
